# boosty-bot

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.dev  Makefile  README.md  docker-compose.dev.yaml  docker-compose.test.yaml  pyproject.toml
bruhsty/: __main__.py  config.py
bruhsty/app/: app.py
bruhsty/bot/: __init__.py  bot.py
bruhsty/bot/handlers/: __init__.py  router.py
bruhsty/bot/handlers/commands/: __init__.py
bruhsty/domain/: __init__.py  abc.py  errors.py  events.py  models.py
bruhsty/service/: __init__.py  proto.py  unit_of_work.py
bruhsty/service/email/: service.py
bruhsty/service/otp/: __init__.py  errors.py  service.py
bruhsty/services/email/: service.py
bruhsty/storage/: __init__.py  specs.py
bruhsty/storage/sql/: __init__.py  base.py  base_storage.py  errors.py  spec.py
bruhsty/storage/user/: __init__.py  models.py
bruhsty/storage/user/postgres/: schema.py  schemas.py  storage.py
bruhsty/storage/verification_codes/: __init__.py  errors.py  models.py
bruhsty/storage/verification_codes/in_memory/: __init__.py  storage.py
bruhsty/storage/verification_codes/postgres/: __init__.py  schema.py  storage.py
config/: config.dist.yaml
docs/: conf.py  index.rst
src/: __main__.py  config.py
src/alembic/: alembic.ini  env.py
src/alembic/versions/: 58a8867ff960_change_users_telegram_id_type_to_big_.py  b6be0d5a8281_added_user_registration_schema.py  cb81b3ef91e2_removed_boosty_profile_added_user_email.py
src/app/: __main__.py  app.py  bot.py  container.py  router.py
src/boosty/: __init__.py  domain.py  profile_updater.py  service_layer.py
src/boosty/adapters/: __init__.py  profile_storage.py  storage.py
src/bot/: __init__.py  bot.py
src/bot/handlers/: __init__.py  router.py
src/bot/handlers/commands/: __init__.py  start.py
src/bot/handlers/dialogs/: __init__.py
src/bot/handlers/dialogs/menu/: __init__.py  dialog.py  handlers.py  state.py
src/channel/: __init__.py  service_layer.py
src/channel/bot/: __init__.py  handlers.py
src/common/adapters/: email.py  sql.py  storage.py
src/common/adapters/boosty/: __init__.py  api.py  models.py
src/common/bot/: filters.py
src/common/domain/: __init__.py  abc.py  events.py
src/common/orm/: base.py
src/common/service_layer/: __init__.py  message_bus.py  unit_of_work.py
src/registration/: __init__.py
src/registration/adapters/: __init__.py
src/registration/adapters/boosty/: __init__.py  api.py  models.py
src/registration/adapters/storage/: schema.py  storage.py
src/registration/domain/: events.py  models.py
src/registration/service_layer/: unit_of_work.py
src/user/: __init__.py  container.py
src/user/adapters/storage/: schema.py  storage.py
src/user/bot/: __init__.py  dialog.py  handlers.py  middlewares.py  state.py
src/user/domain/: events.py  models.py
src/user/service_layer/: channels.py  handlers.py  register.py  unit_of_work.py
tests/: config.py  config.test.yaml  conftest.py  test_config.py  test_specification.py  utils.py
tests/fixtures/: db_fixtures.py  fake.py
tests/integrational/: conftest.py  test_boosty_api.py  test_boosty_api_integrity.py  utils.py
tests/integrational/orm/: test_user_schema.py
tests/integrational/service/: test_unit_of_work.py
tests/integrational/storage/: test_user_storage.py
tests/sql/: test_user_storage.py
tests/unit/: test_boosty_api.py  test_domain.py  test_filters.py
tests/verification_codes_storage/: test_in_memory_storage.py  test_verification_codes_storage.py
