[tool.poetry]
name = "bruhsty"
version = "0.1.0"
description = "Manages your telegram channel for boosters"
authors = [
    "Artem Burenin <burenin.aa@yandex.ru>",
    "Anton Skugarev",
    "Alex Shivilov <>"
]
readme = "README.md"
repository = "https://github.com/911enjoyers/boosty-bot"
keywords = ["telegram", "bot", "boosty"]
packages = [
    { include = "bruhsty", format = "wheel" },
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Framework :: AsyncIO",
    "Framework :: Pytest",
    "Intended Audience :: Customer Service",
    "Natural Language :: English",
    "Natural Language :: Russian",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Typing :: Typed",
    "License :: OSI Approved :: MIT License"
]

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.3.0"
pydantic = "2.5.3"
pydantic-settings = "^2.1.0"
pyyaml = "^6.0.1"
uvicorn = { extras = ["standard"], version = "^0.27.0.post1" }
aiosmtplib = "^3.0.1"
redis = "^5.0.2"
sqlalchemy = { extras = ["asyncio"], version = "^2.0.27" }
pytest = "^8.1.1"
asyncpg = "^0.29.0"
httpx = "^0.27.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"
faker = "^23.1.0"
pre-commit = "^3.6.2"
types-pyyaml = "^6.0.12.20240311"

[tool.poetry.group.test.dependencies]
aiosqlite = "^0.20.0"
pytest = "^8.0.0"
pytest-asyncio = "^0.23.5"



[tool.poetry.group.docs.dependencies]
sphinx = "^7.2.6"

[tool.mypy]
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
check_untyped_defs = true
ignore_errors = ""
warn_unused_configs = true


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
