[tool.poetry]
name = "bruhsty"
version = "0.1.0"
description = "Manages your telegram channel for boosters"
authors = ["Artem Burenin <burenin.aa@yandex.ru>"]
readme = "README.md"
packages = [
    { include = "app", from = "src" },
    { include = "bot", from = "src" },
    { include = "common", from = "src" },
    { include = "registration", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.3.0"
pydantic = "2.5.3"
pydantic-settings = "^2.1.0"
pyyaml = "^6.0.1"
uvicorn = { extras = ["standard"], version = "^0.27.0.post1" }
aiosmtplib = "^3.0.1"
redis = "^5.0.2"
sqlalchemy = { extras = ["asyncio"], version = "^2.0.27" }
pytest = "^8.1.1"
asyncpg = "^0.29.0"
httpx = "^0.27.0"
dependency-injector = "^4.41.0"
aiogram-dialog = "^2.1.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"
pytest = "^8.0.0"
faker = "^23.1.0"
pre-commit = "^3.6.2"
pytest-asyncio = "^0.23.5"
aiosqlite = "^0.20.0"
types-pyyaml = "^6.0.12.20240311"
ruff = "^0.3.4"
alembic = "^1.13.1"


[tool.poetry.group.test.dependencies]
pytest-cov = "^4.1.0"

[tool.mypy]
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
check_untyped_defs = true
ignore_errors = ""
warn_unused_configs = true

[tool.ruff]
line-length = 100

[tool.ruff.lint]
extend-select = ["E", "F", "I", "W"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
